# preprocessing-latent-multiverse

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml
config/datasets/: Merged35.yml  NF-CICIDS2018-v3.yml  NF-ToN-IoT-v3.yml  NF-UNSW-NB15-v3.yml
configs/: default.yaml
scripts/: bootstrap.sh  sync_data.sh
src/alphacomplexbenchmarking/: __init__.py  cli.py  config.py  logging_config.py  make_readme_tree.py  visualization.py
src/alphacomplexbenchmarking/complexes/: alpha_complex_persistence.py
src/alphacomplexbenchmarking/experiments/: parameter_sensitivity.py
src/alphacomplexbenchmarking/features/: simulate_data.py
src/alphacomplexbenchmarking/io/: run_id.py  storage.py
src/alphacomplexbenchmarking/landscapes/: compute_landscapes.py
src/alphacomplexbenchmarking/pipeline/: autoencoder.py  create_embeddings.py  create_tda.py  embeddings.py  landscapes.py  metrics.py  parallel.py  persistence.py  preprocessing.py  sim.py  specs.py  tda.py  universes.py
src/preprolamu/: __init__.py  analyses.py  bug_inspection.ipynb  cli.py  config.py  example_plots.py  logging_config.py  make_readme_tree.py  merge_pca_experiment_csvs.py  merge_sample_experiment_csvs.py  plots.py  utils_analyses_plots.py  visualization.py
src/preprolamu/CLI/: analyses.py  cli.py  plots.py
src/preprolamu/experiments/: embedding_persistence_experiment.py  merge_pca_experiment_csvs.py  merge_sample_experiment_csvs.py  parameter_sensitivity.py  pca_dim_experiment.py  sample_size_experiment.py  single_u_multi_seed_sample_size_experiment.py
src/preprolamu/helpers/: __init__.py  results.py  statistics.py  tabular.py  tda.py
src/preprolamu/io/: io.py  paths.py  storage.py
src/preprolamu/pipeline/: autoencoder.py  create_embeddings.py  create_tda.py  cross_dataset_evaluation.py  embedding_quality_metrics.py  embeddings.py  evaluation.py  landscapes.py  metrics.py  parallel.py  persistence.py  preprocessing.py  tda.py  universes.py
src/preprolamu/tests/: ae_anomaly_check.py  aggregate_ae_anomaly_checks.py  data_checks.py  embedding_persistence_experiment.py  landscape_checks.py  landscape_norm_tests.py  pca_dim_experiment.py  sample_size_experiment.py  single_u_multi_seed_sample_size_experiment.py
src/preprolamu/utils/: utils.py
src/project_name/: cli.py
tests/: test_cli.py  test_sim.py
