[project]
name = "alphacomplexbenchmarking"
version = "0.1.0"
description = "Running tests to benchmark alpha complex implementations and persistence computations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "Maarten Bosten", email = "m.n.m.l.bosten@tilburguniversity.edu" } ]

# Runtime dependencies
dependencies = [
    "numpy>=1.26",
    "gudhi>=3.9.0",
    "typer>=0.12",
    "rich>=13.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
]

# Allows cli commands to be run as: uv run acb [cli function] [parameters]
[project.scripts]
acb = "alphacomplexbenchmarking.cli:app"
setup = "alphacomplexbenchmarking.config:app"


[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"


[tool.uv]
# Not packaging/building: treat as non-installable project
package = true
