[project]
name = "preprolamu"
version = "0.1.0"
description = "Quantify embedding space variability using persistent homology and multiverse analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "Maarten Bosten", email = "m.n.m.l.bosten@tilburguniversity.edu" } ]

# Runtime dependencies
dependencies = [
    "torch==2.9.1",
    "numpy>=1.26",
    "gudhi>=3.9.0",
    "typer>=0.12",
    "rich>=13.0",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "matplotlib>=3.10.7",
    "pre-commit>=4.5.0",
    "persim>=0.3.8",
    "seaborn>=0.13.2",
    "pytest-cov>=7.0.0",
    "statsmodels>=0.14.6",
    "ipympl",
    "plotly>=6.5.2",
    "nbformat>=5.10.4",
    "cython>=3.2.4",
]

# Allows cli commands to be run as: uv run acb [cli function] [parameters]
[project.scripts]
acb = "preprolamu.cli:app"
setup = "preprolamu.config:app"
plot = "preprolamu.plots:app"
analyze = "preprolamu.analyses:app"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv]
# Not packaging/building: treat as non-installable project
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
